<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >

    <data>
        <import type="camp.nextstep.edu.calculator.domain.Operator" />

        <variable
            name="viewmodel"
            type="camp.nextstep.edu.calculator.CalculatorViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".CalculatorActivity">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:hint="0"
            android:textAlignment="viewEnd"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@id/divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="HardcodedText"
            android:text="@{viewmodel.text}"
            app:isVisible="@{!viewmodel.historyVisible}"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/textView"
            app:layout_constraintEnd_toEndOf="@id/textView"
            app:layout_constraintStart_toStartOf="@id/textView"
            app:layout_constraintTop_toTopOf="@id/textView"
            tools:listitem="@layout/item_result"
            app:isVisible="@{viewmodel.historyVisible}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="vertical"
            />

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginBottom="16dp"
            android:background="#ddd"
            app:layout_constraintBottom_toTopOf="@id/buttonDelete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonDelete"
            style="@style/Widget.Calculator.Button.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:icon="@drawable/ic_baseline_keyboard_backspace_24"
            app:layout_constraintBottom_toTopOf="@id/input"
            app:layout_constraintEnd_toEndOf="@id/input"
            android:onClick="@{() -> viewmodel.removeLast()}"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonMemory"
            style="@style/Widget.Calculator.Button.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_baseline_access_time_24"
            app:layout_constraintBottom_toBottomOf="@id/buttonDelete"
            app:layout_constraintStart_toStartOf="@id/input"
            app:layout_constraintTop_toTopOf="@id/buttonDelete"
            android:onClick="@{() -> viewmodel.toggleHistory()}"
            />

        <GridLayout
            android:id="@+id/input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="4"
            android:rowCount="4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            >

            <Button
                android:id="@+id/button7"
                style="@style/Widget.Calculator.Button.Uncolored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculator_7"
                android:onClick="@{() -> viewmodel.addToExpression(7)}"
                />

            <Button
                android:id="@+id/button8"
                style="@style/Widget.Calculator.Button.Uncolored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculator_8"
                android:onClick="@{() -> viewmodel.addToExpression(8)}"
                />

            <Button
                android:id="@+id/button9"
                style="@style/Widget.Calculator.Button.Uncolored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculator_9"
                android:onClick="@{() -> viewmodel.addToExpression(9)}"
                />

            <Button
                android:id="@+id/buttonDivide"
                style="@style/Widget.Calculator.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculator_divide"
                android:onClick="@{() -> viewmodel.addToExpression(Operator.Divide)}"
                />

            <Button
                android:id="@+id/button4"
                style="@style/Widget.Calculator.Button.Uncolored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculator_4"
                android:onClick="@{() -> viewmodel.addToExpression(4)}"
                />

            <Button
                android:id="@+id/button5"
                style="@style/Widget.Calculator.Button.Uncolored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculator_5"
                android:onClick="@{() -> viewmodel.addToExpression(5)}"
                />

            <Button
                android:id="@+id/button6"
                style="@style/Widget.Calculator.Button.Uncolored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculator_6"
                android:onClick="@{() -> viewmodel.addToExpression(6)}"
                />

            <Button
                android:id="@+id/buttonMultiply"
                style="@style/Widget.Calculator.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculator_multiply"
                android:onClick="@{() -> viewmodel.addToExpression(Operator.Multiply)}"
                />

            <Button
                android:id="@+id/button1"
                style="@style/Widget.Calculator.Button.Uncolored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculator_1"
                android:onClick="@{() -> viewmodel.addToExpression(1)}"
                />

            <Button
                android:id="@+id/button2"
                style="@style/Widget.Calculator.Button.Uncolored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculator_2"
                android:onClick="@{() -> viewmodel.addToExpression(2)}"
                />

            <Button
                android:id="@+id/button3"
                style="@style/Widget.Calculator.Button.Uncolored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculator_3"
                android:onClick="@{() -> viewmodel.addToExpression(3)}"
                />

            <Button
                android:id="@+id/buttonMinus"
                style="@style/Widget.Calculator.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculator_minus"
                android:onClick="@{() -> viewmodel.addToExpression(Operator.Minus)}"
                />

            <Button
                android:id="@+id/button0"
                style="@style/Widget.Calculator.Button.Uncolored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculator_0"
                android:onClick="@{() -> viewmodel.addToExpression(0)}"
                />

            <Space
                android:id="@+id/space1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <Button
                android:id="@+id/buttonEquals"
                style="@style/Widget.Calculator.Button.BackgroundColored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculator_equals"
                android:onClick="@{() -> viewmodel.calculate()}"
                />

            <Button
                android:id="@+id/buttonPlus"
                style="@style/Widget.Calculator.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculator_plus"
                android:onClick="@{() -> viewmodel.addToExpression(Operator.Plus)}"
                />
        </GridLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
